Fix nowrap class

--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -608,5 +608,5 @@ div.json.fullheight {
 }
 
 .nowrap {
-    white-space: nowrap;
+    white-space: nowrap !important;
 }
